add ellipsis to breadcrumbs with ::after  & fix footer flex-wrap at around 800px width

--- a/details.html
+++ b/details.html
@@ -27,8 +27,8 @@
 	<body>
 		<!-- place for header  -->
 		<main>
-			<div id="breadcrumbs">
-				<ol>
+			<div id="bc-container">
+				<ol id="breadcrumbs">
 					<li>
 						<a href="">Beranda</a
 						><span class="material-symbols-outlined next"> navigate_next </span>
