major footer overhaul for mobile and desktop, add 2 new classes for footer mega menu

--- a/details.html
+++ b/details.html
@@ -218,29 +218,29 @@
 			</div>
 		</main>
 		<footer>
-			<div id="footer">
-				<div>
-					<h2>Kategori</h2>
-					<span class="material-symbols-outlined expand"> expand_more </span>
-				</div>
-				<div>
-					<h2>Kategori Populer</h2>
-					<span class="material-symbols-outlined expand"> expand_more </span>
-				</div>
-				<div>
-					<h2>Pencarian Populer</h2>
-					<span class="material-symbols-outlined expand"> expand_more </span>
-				</div>
-				<div>
-					<h2>OLX Indonesia</h2>
-					<span class="material-symbols-outlined expand"> expand_more </span>
-				</div>
-				<div>
-					<h2>OLX</h2>
-					<span class="material-symbols-outlined expand"> expand_more </span>
-				</div>
-				<div class="socials">
-					<div class="socmed">
+			<div id="footer-wrapper">
+				<div id="m-footer-menu">
+					<div>
+						<h2>Kategori</h2>
+						<span class="material-symbols-outlined expand"> expand_more </span>
+					</div>
+					<div>
+						<h2>Kategori Populer</h2>
+						<span class="material-symbols-outlined expand"> expand_more </span>
+					</div>
+					<div>
+						<h2>Pencarian Populer</h2>
+						<span class="material-symbols-outlined expand"> expand_more </span>
+					</div>
+					<div>
+						<h2>OLX Indonesia</h2>
+						<span class="material-symbols-outlined expand"> expand_more </span>
+					</div>
+					<div>
+						<h2>OLX</h2>
+						<span class="material-symbols-outlined expand"> expand_more </span>
+					</div>
+					<div class="m-socmed">
 						<h2>Ikuti Kami</h2>
 						<div class="socmed-icons">
 							<img src="./general-assets/facebook.png" alt="facebook" />
@@ -251,9 +251,57 @@
 					</div>
 					<div class="downloads">
 						<img
+							class="badge"
 							src="./general-assets/google-play-badge.png"
 							alt="play store badge"
 						/><img
+							class="badge"
+							src="./general-assets/download-app-store-badge.png"
+							alt="app store badge"
+						/>
+					</div>
+				</div>
+				<div id="d-footer-menu">
+					<div>
+						<h2>Kategori Populer</h2>
+						<a href="">Mobil Bekas</a>
+						<a href="">Rumah & Apartmen</a>
+						<a href="">Motor Bekas</a><a href="">Handphone</a>
+					</div>
+					<div>
+						<h2>Pencarian Populer</h2>
+						<a href="">Tablet</a>
+						<a href="">Fashion Pria</a>
+						<a href="">Fashion Wanita</a><a href="">Furniture</a>
+					</div>
+					<div>
+						<h2>OLX Indonesia</h2>
+						<a href="">OLX Karir</a>
+						<a href="">OLX News</a>
+						<a href="">Jual Mobil Instan</a>
+					</div>
+					<div>
+						<h2>OLX</h2>
+						<a href="">Pusat Bantuan</a>
+						<a href="">Peta Situs</a>
+						<a href="">Kebijakan Privasi</a>
+						<a href="">Tips Aman</a>
+						<a href="">OLXmobbi</a>
+					</div>
+					<div class="d-socials">
+						<h2>Ikuti Kami</h2>
+						<div class="socmed-icons">
+							<img src="./general-assets/facebook.png" alt="facebook" />
+							<img src="./general-assets/twitter.png" alt="twitter" />
+							<img src="./general-assets/instagram.png" alt="instagram" />
+							<img src="./general-assets/youtube.png" alt="youtube" />
+						</div>
+						<img
+							class="badge"
+							src="./general-assets/google-play-badge.png"
+							alt="play store badge"
+						/><img
+							class="badge"
 							src="./general-assets/download-app-store-badge.png"
 							alt="app store badge"
 						/>
