fix footer copyright responsive display

--- a/details.html
+++ b/details.html
@@ -266,13 +266,15 @@
 						<h2>Kategori Populer</h2>
 						<a href="">Mobil Bekas</a>
 						<a href="">Rumah & Apartmen</a>
-						<a href="">Motor Bekas</a><a href="">Handphone</a>
+						<a href="">Motor Bekas</a>
+						<a href="">Handphone</a>
 					</div>
 					<div>
 						<h2>Pencarian Populer</h2>
 						<a href="">Tablet</a>
 						<a href="">Fashion Pria</a>
-						<a href="">Fashion Wanita</a><a href="">Furniture</a>
+						<a href="">Fashion Wanita</a>
+						<a href="">Furniture</a>
 					</div>
 					<div>
 						<h2>OLX Indonesia</h2>
@@ -309,6 +311,7 @@
 				</div>
 			</div>
 			<div id="copyright">
+				<a href="">Bantuan - Peta lokasi</a>
 				<p><b>Iklan Baris Gratis di Indonesia .</b> © 2006-2024 OLX</p>
 			</div>
 		</footer>
