re-arrange contact desktop layout position

--- a/details.html
+++ b/details.html
@@ -75,8 +75,7 @@
 							<img src="./details-assets/image01.webp" alt="image01" />
 						</figure>
 					</div>
-					<div class="desc-card">
-						<h4 class="images-heading">Pilih Gambar</h4>
+					<div class="desc-card gallery">
 						<div class="thumbnails">
 							<a href=""
 								><img src="./details-assets/image01.webp" alt="thumb1" /></a
@@ -92,6 +91,8 @@
 								><img src="./details-assets/image06.webp" alt="thumb6"
 							/></a>
 						</div>
+					</div>
+					<div class="desc-card">
 						<article class="price-info">
 							<h2>Rp.1.354.200.000</h2>
 							<div class="like-share">
@@ -194,6 +195,12 @@
 							navigate_next
 						</span>
 					</div>
+					<div id="contact">
+						<button>Chat</button
+						><button>
+							<span class="material-symbols-outlined"> call </span>Telephone
+						</button>
+					</div>
 					<div class="desc-card">
 						<h2>Lokasi Iklan</h2>
 						<img
@@ -207,12 +214,6 @@
 							<h5><a href="">ID IKLAN 897879853</a></h5>
 							<h5><a href="">LAPORKAN IKLAN INI</a></h5>
 						</div>
-					</div>
-					<div id="contact">
-						<button>Chat</button
-						><button>
-							<span class="material-symbols-outlined"> call </span>Telephone
-						</button>
 					</div>
 				</div>
 			</div>
