fix most desktop responsive layout

--- a/details.html
+++ b/details.html
@@ -92,7 +92,7 @@
 							/></a>
 						</div>
 					</div>
-					<div class="desc-card">
+					<div class="desc-card m-title">
 						<article class="price-info">
 							<h2>Rp.1.354.200.000</h2>
 							<div class="like-share">
@@ -118,7 +118,72 @@
 							alt="mobile banner"
 						/>
 					</div>
-					<div class="desc-card">
+					<div class="desc-card d-spec">
+						<h2>Detail</h2>
+						<div class="detail">
+							<div class="spec">
+								<p>Tipe</p>
+								<p>Rumah</p>
+							</div>
+							<div class="spec">
+								<p>Luas Bangunan</p>
+								<p>84</p>
+							</div>
+							<div class="spec">
+								<p>Luas Tanah</p>
+								<p>90</p>
+							</div>
+							<div class="spec">
+								<p>Kamar Tidur</p>
+								<p>2</p>
+							</div>
+							<div class="spec">
+								<p>Kamar Mandi</p>
+								<p>2</p>
+							</div>
+							<div class="spec">
+								<p>Lantai</p>
+								<p>0</p>
+							</div>
+							<div class="spec">
+								<p>Fasilitas</p>
+								<ul class="spec-list">
+									<li>Telephone</li>
+									<li>Garden</li>
+								</ul>
+							</div>
+						</div>
+						<hr />
+						<h2>Deskripsi</h2>
+						<div class="item-desc">
+							<p>
+								Telaga Kahuripan Cluster Aluna Tipe 6, merupakan perumahan 2
+								lantai yang dilengkapi dengan:
+							</p>
+							<p class="space"></p>
+							<p class="space"></p>
+							<p>- Luas tanah 90 m2</p>
+							<p>- Luas bangunan 84 m2</p>
+							<p>- 2 kamar tidur</p>
+							<p>- 2 kamar mandi</p>
+							<p>- Ruang keluarga/tamu</p>
+							<p>- Ruang makan</p>
+							<p>- Dapur</p>
+							<p>- Halaman belakang</p>
+							<p>- Carport untuk 1 mobil</p>
+							<p class="space"></p>
+							<p class="space"></p>
+							<p>Keunggulan Telaga Kahuripan:</p>
+							<p class="space"></p>
+							<p class="space"></p>
+							<p>- Berada dilokasi strategis</p>
+							<p>- Kemudahan akses</p>
+							<p>- Dekat dengan sarana publik</p>
+							<p>- Dekat dengan fasilitas umum</p>
+							<p>- Dekat dengan sarana pendidikan</p>
+						</div>
+					</div>
+					<div class="desc-card m-spec">
 						<h2>Detail</h2>
 						<div class="detail">
 							<div class="spec">
@@ -154,7 +219,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="desc-card">
+					<div class="desc-card m-spec">
 						<h2>Deskripsi</h2>
 						<div class="item-desc">
 							<p>
@@ -186,20 +251,36 @@
 					</div>
 				</div>
 				<div class="col-2">
-					<div class="avatar">
-						<div class="cred">
-							<img src="./details-assets/avatar.jpeg" alt="asep" />
-							<h3>Asep</h3>
-						</div>
-						<span class="material-symbols-outlined big-icon">
-							navigate_next
-						</span>
+					<div class="desc-card d-title">
+						<article class="price-info">
+							<h2>Rp.1.354.200.000</h2>
+							<div class="like-share">
+								<span class="material-symbols-outlined custom-icon">
+									share </span
+								><span class="material-symbols-outlined custom-icon">
+									favorite
+								</span>
+							</div>
+						</article>
+						<article class="title">
+							<p>2 KT - 2 KM - 84 m2</p>
+							<p>Telaga Kahuripan Cluster Aluna Tipe 6</p>
+						</article>
+						<article class="location-date">
+							<p>Kemang, Jakarta Selatan, Jakarta D.K.I.</p>
+							<p>05 Mar</p>
+						</article>
 					</div>
-					<div id="contact">
-						<button>Chat</button
-						><button>
-							<span class="material-symbols-outlined"> call </span>Telephone
-						</button>
+					<div class="desc-card">
+						<div class="avatar">
+							<div class="cred">
+								<img src="./details-assets/avatar.jpeg" alt="asep" />
+								<h3>Asep</h3>
+							</div>
+							<span class="material-symbols-outlined big-icon">
+								navigate_next
+							</span>
+						</div>
 					</div>
 					<div class="desc-card">
 						<h2>Lokasi Iklan</h2>
@@ -316,5 +397,11 @@
 				<p><b>Iklan Baris Gratis di Indonesia .</b> © 2006-2024 OLX</p>
 			</div>
 		</footer>
+		<div id="contact">
+			<button>Chat</button
+			><button>
+				<span class="material-symbols-outlined"> call </span>Telephone
+			</button>
+		</div>
 	</body>
 </html>
