finish details overhaul of desktop and mobile responsive

--- a/details.html
+++ b/details.html
@@ -96,9 +96,9 @@
 						<article class="price-info">
 							<h2>Rp.1.354.200.000</h2>
 							<div class="like-share">
-								<span class="material-symbols-outlined custom-icon">
+								<span class="material-symbols-outlined custom-icon share">
 									share </span
-								><span class="material-symbols-outlined custom-icon">
+								><span class="material-symbols-outlined custom-icon like">
 									favorite
 								</span>
 							</div>
@@ -108,8 +108,8 @@
 						</article>
 						<hr />
 						<article class="location-date">
-							<p>Kemang, Jakarta Selatan, Jakarta D.K.I.</p>
-							<p>05 Mar</p>
+							<p class="loc-details">Kemang, Jakarta Selatan, Jakarta D.K.I.</p>
+							<p class="loc-details">05 Mar</p>
 						</article>
 					</div>
 					<div class="banner">
@@ -255,9 +255,9 @@
 						<article class="price-info">
 							<h2>Rp.1.354.200.000</h2>
 							<div class="like-share">
-								<span class="material-symbols-outlined custom-icon">
+								<span class="material-symbols-outlined custom-icon share">
 									share </span
-								><span class="material-symbols-outlined custom-icon">
+								><span class="material-symbols-outlined custom-icon like">
 									favorite
 								</span>
 							</div>
@@ -267,8 +267,8 @@
 							<p>Telaga Kahuripan Cluster Aluna Tipe 6</p>
 						</article>
 						<article class="location-date">
-							<p>Kemang, Jakarta Selatan, Jakarta D.K.I.</p>
-							<p>05 Mar</p>
+							<p class="loc-details">Kemang, Jakarta Selatan, Jakarta D.K.I.</p>
+							<p class="loc-details">05 Mar</p>
 						</article>
 					</div>
 					<div class="desc-card">
@@ -281,9 +281,22 @@
 								navigate_next
 							</span>
 						</div>
+						<div class="d-contact">
+							<button>Chat dengan penjual</button>
+							<div class="show-number">
+								<div>
+									<span class="material-symbols-outlined"> call </span>
+									<h3>** *** ****</h3>
+								</div>
+								<a href="">Tampilkan nomor</a>
+							</div>
+						</div>
 					</div>
 					<div class="desc-card">
 						<h2>Lokasi Iklan</h2>
+						<p class="loc-details d-loc">
+							Kemang, Jakarta Selatan, Jakarta D.K.I.
+						</p>
 						<img
 							class="location"
 							src="./details-assets/Screenshot 2024-03-22 at 15.34.54.png"
